--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2019.11.28
 Click==7.0
 Flask==1.1.1
 Flask-Migrate==2.5.2
+Flask-Login==0.4.1
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
 gunicorn==20.0.4
