--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-Migrate==2.5.2
 Flask-Login==0.4.1
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
+Flask-Babel==0.12.2
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.10.3
